Goals list text alignment fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,7 @@ h2 {
 
 #goals li {
 	margin-bottom: 7px;
+	text-align: left;
 }
 
 #contact {
